--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap');
 
 :root {
-    --primary-color: #22254b;
-    --secondary-color: #373b69;
+   /* --primary-color: #22254b;
+    --secondary-color: #373b69; */
+    --primary-color: rgb(1, 15, 19);
+    --secondary-color: rgb(10, 89, 109);
 }
 
 * {
@@ -19,12 +21,13 @@ header {
     padding: 1rem;
     display: flex;
     justify-content: flex-end;
-    background-color: var(--secondary-color);
+   /* background-color: var(--secondary-color); */
+    background-color: rgba(231, 171, 5, 0.904);
 }
 
 .search {
     background-color: transparent;
-    border: 2px solid var(--primary-color);
+    border: 3px solid /*var(--primary-color)*/ rgb(1, 21, 27);
     border-radius: 50px;
     font-family: inherit;
     font-size: 1rem;
@@ -33,7 +36,8 @@ header {
 }
 
 .search::placeholder {
-    color: #7378c5;
+    /*color: #7378c5;*/
+    color: rgb(244, 247, 242);
 }
 
 .search:focus {
